WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143574
REGRESSION (
r182573
): Action Menus no longer appear for WebKit2 views displaying an image
https://bugs.webkit.org/show_bug.cgi?id=143574
Summary
REGRESSION (r182573): Action Menus no longer appear for WebKit2 views display...
Brady Eidson
Reported
2015-04-09 13:39:29 PDT
REGRESSION (
r182573
): Action Menus no longer appear for WebKit2 views displaying an image
rdar://problem/20486551
Attachments
Patch v1
(1.64 KB, patch)
2015-04-09 13:42 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-04-09 13:42:05 PDT
Created
attachment 250461
[details]
Patch v1
Brent Fulgham
Comment 2
2015-04-09 13:43:16 PDT
Comment on
attachment 250461
[details]
Patch v1 r=me.
WebKit Commit Bot
Comment 3
2015-04-09 14:33:52 PDT
Comment on
attachment 250461
[details]
Patch v1 Clearing flags on attachment: 250461 Committed
r182607
: <
http://trac.webkit.org/changeset/182607
>
WebKit Commit Bot
Comment 4
2015-04-09 14:33:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug