REGRESSION (r182573): Action Menus no longer appear for WebKit2 views displaying an image rdar://problem/20486551 and https://bugs.webkit.org/show_bug.cgi?id=143574

Reviewed by Brent Fulgham.

* Shared/WebHitTestResult.cpp:
(WebKit::WebHitTestResult::Data::Data): Clear up a name scoping issue.


Canonical link: https://commits.webkit.org/161605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182607 268f45cc-cd09-0410-ab3c-d52691b4dbfc